[gd_scene load_steps=2 format=3 uid="uid://bkn7x5q2w8mha"]

[ext_resource type="Script" path="res://ui/hud/turn_indicator.gd" id="1_turn_indicator"]

[node name="TurnIndicator" type="PanelContainer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_bottom = 100.0
grow_horizontal = 0
script = ExtResource("1_turn_indicator")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 5

[node name="TurnLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Turn 1"

[node name="PhaseLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Phase: Movement"

[node name="FactionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Active: Player"
